<resources>
    <string name="app_name">ExpensesApp</string>
    <string name="app_title">Expenses App</string>

    <!-- Text -->
    <string name="text_about_information">ExpensesApp stemmed from the idea that keeping track of smaller expenses can often be difficult and seem pointless. However, over time these small purchases do add up and can cause unwanted surprises. The easiest way to make this more simple would be to make it more fun, hence the idea of developing an app that made this experience fun became my goal.</string>
    <string name="text_about_contact">Contact me through my email or portfolio site!</string>
    <string name="title_contact">Contact Me</string>
    <string name="text_download_resume">Download my resume:</string>

    <!-- Content Descriptions -->
    <string name="description_logo">App Logo</string>

    <!-- Message codes -->
    <string name="code_failure_file_context">File context not initialized</string>
    <string name="code_method_not_implemented">Method is not implemented yet</string>

    <!-- Button text -->
    <string name="button_create_account">Create Account</string>
    <string name="button_login">Login</string>
    <string name="button_request_password_reset">Request Reset</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_contact_email">Email</string>
    <string name="button_contact_site">Site</string>
    <string name="button_download_resume">Resume</string>

    <!-- Content Descriptions ("alt") tags -->
    <string name="content_app_logo">App Logo</string>

    <string name="cancelled_request_password_reset">Password reset cancelled</string>
    <string name="ok">Ok</string>

    <!-- Dialog text -->
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_message_clear_database">Are you sure you want to clear the database?</string>
    <string name="dialog_message_delete_account">Are you sure you want to delete your account?</string>
    <string name="dialog_message_request_password_reset">Cancel the password reset request?</string>
    <string name="dialog_message_reset_password">Cancel the password reset?</string>
    <string name="dialog_negative_request_password_reset">No</string>
    <string name="dialog_negative_reset_password">No</string>
    <string name="dialog_permission_denied_download_resume_text">Cannot download resume because download permission was denied.</string>
    <string name="dialog_permission_denied_download_resume_title">Download denied</string>
    <string name="dialog_positive_request_password_reset">Yes</string>
    <string name="dialog_positive_reset_password">Yes</string>
    <string name="dialog_title_clear_database">Clear Database?</string>
    <string name="dialog_title_delete_account">Delete Account?</string>
    <string name="dialog_title_request_password_reset">Cancel Reset Request?</string>
    <string name="dialog_title_reset_password">Cancel Password Reset?</string>

    <!-- Error messages -->
    <string name="error_account_already_exists">An account with this email already exists</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_mismatching_passwords">These passwords do not match</string>
    <string name="error_reset_password_invalid_email">No account with this email</string>

    <!-- Operation failure messages -->
    <string name="failure_clear_database">Failed to clear database</string>
    <string name="failure_create_account">Account creation failed</string>
    <string name="failure_delete_account">Account deletion failed</string>
    <string name="failure_download_resume">Downloading resume failed</string>
    <string name="failure_login">Login failed</string>
    <string name="failure_request_password_reset">Password reset request failed</string>
    <string name="failure_reset_password">Password reset failed</string>

    <!-- Hint text messages -->
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>

    <string name="label_password_reset">Password reset for</string>

    <!-- Operation success messages -->
    <string name="success_clear_database">Database cleared</string>
    <string name="success_create_account">Account created</string>
    <string name="success_delete_account">Account deleted</string>
    <string name="success_download_resume">Resume downloaded</string>
    <string name="success_login">Login succeeded</string>
    <string name="success_request_password_reset">Password reset requested</string>
    <string name="success_reset_password">Password reset successfully</string>

    <!-- Operation progress messages -->
    <string name="progress_message_create_account">Creating Account</string>
    <string name="progress_message_login_attempt">Logging in</string>
    <string name="progress_message_request_password_reset">Requesting Password Reset</string>
    <string name="progress_message_reset_password">Resetting Password</string>

    <!-- Pseudo-button text -->
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_create_account">No account? Create one</string>
    <string name="prompt_forgot_password">Forgot password?</string>
    <string name="prompt_login">Already have an account? Login</string>

    <!-- Activity titles -->
    <string name="title_activity_about">About</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_request_password_reset">Forgot Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_app">ExpensesApp</string>

    <!-- Preferences -->
    <string name="pref_category_developer_options">Developer Options</string>
    <string name="pref_category_key_developer">category_developer</string>
    <string name="pref_key_clear_db">clear_db</string>
    <string name="pref_key_delete_account">delete_account</string>
    <string name="pref_summary_clear_db">Clear the database (developer)</string>
    <string name="pref_summary_delete_account">Delete user account (developer)</string>
    <string name="pref_title_clear_db">Clear Database</string>
    <string name="pref_title_delete_account">Delete Account</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="drawer_other_group">Other</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
